--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Rune Selector</title>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0 }
     html, body {
@@ -98,6 +99,7 @@
       border: none;
       outline: none;
     }
+    <link rel>
   </style>
 </head>
 <body>
